k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: wisecow-deployment

spec:
  replicas: 2

  selector:
    matchLabels:
      app: wisecow

  template:
    metadata:
      labels:
        app: wisecow

    spec:
      containers:
      - name: wisecow-container
        image: wisecow-app:latest

        imagePullPolicy: Never

        ports:
        - containerPort: 5000
